--- a/style.css
+++ b/style.css
@@ -47,26 +47,25 @@ body{
   input:hover {
     cursor: pointer;
   }
- .display{ 
-    /* border: solid hotpink; */
-      /* width: 40vw; */
-      /* height: 10vh; */
+ /* .display{ 
+  
       background-color: hsl(268, 47%, 21%); ;
       color: white;
       margin-top: 5%;
       display: flex;
       justify-content: end;
-      /* color:hsl(224, 36%, 15%); */
-  }
+  } */
    .display input{
-    height: 5vh;
+    /* border: solid red; */
+    width: 100%;
+    height: 7vh;
     background-color: hsl(268, 40%, 36%); ;
     color: hsl(52, 100%, 62%);
     margin-top: 5%;
     display: flex;
     justify-content: end;
     border-radius: 10px;
-    border: none;
+    /* border: none; */
     font-weight: bold;
     font-size: 20px;
    }
@@ -128,6 +127,8 @@ body{
         font-weight: bold;
         margin: 5px 5px;
         background-color: hsl(285, 91%, 52%);
+        color: hsl(52, 100%, 62%);
+        /* font-weight: bold; */
     }
     .btndown button{
         width: 132px;
@@ -143,7 +144,7 @@ body{
       font-weight: bold;
   }
   .equal{
-      color: white;
+      color: black;
       background-color:  hsl(176, 100%, 44%);
       font-weight: bold;
   }
@@ -151,6 +152,9 @@ body{
       background-color: hsl(281, 89%, 26%);
       font-weight: bold;
       color: white;
+  }
+  .attribution{
+    margin-top: 5px;
   }
   @media only screen and (max-width:600px){
 
@@ -180,7 +184,7 @@ body{
     }
     .display input{
         height: 8vh;
-        background-color: hsl(268, 47%, 21%); ;
+        background-color: hsl(268, 47%, 21%);
         margin-top: 5%;
         display: flex;
         justify-content: end;
