--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body{
     display: flex;
     justify-content: end;
     border-radius: 10px;
-    /* border: none; */
+    border: none;
     font-weight: bold;
     font-size: 20px;
    }
